[package]
name = "pingora_cache_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
pingora = { version = "0.6", features = ["proxy", "cache", "lb"] }
pingora-memory-cache = "0.6"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
log = "0.4"
http = "1.0"
once_cell = "1.18"
